--- a/themes/portfolio/layouts/partials/head.html
+++ b/themes/portfolio/layouts/partials/head.html
@@ -1,7 +1,17 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 {{ with .Title }}<title>{{ . }}</title>{{ end }}
+
+
+{{ if not .Params.prodname }}
 {{ with .Site.Params.description }}<meta name="description" content="{{ . }}">{{ end }}
+{{ end }}
+
+{{ if  .Params.prodname }}
+<meta name="description" content="🔥{{ .Params.actualPrice}} ❌{{ .Params.comparePrice }} - {{ .Params.prodname }}">
+{{ end }}
+
+
 {{ range .AlternativeOutputFormats -}}
     {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
 {{ end -}}
@@ -64,13 +74,18 @@
           ],
           "description": "{{ .Params.title }}",
           "sku": "{{ .Params.slug }}",
+          "mpn":"",
           "offers": {
               "@type": "Offer",
               "url": "{{ .Permalink | absURL }}",
               "priceCurrency": "{{ .Params.currency }}",
               "price": "{{ .Params.price }}",
               "itemCondition": "https://schema.org/NewCondition",
-              "availability": "https://schema.org/InStock"
+              "availability": "https://schema.org/InStock",
+              "seller": {
+                "@type": "Organization",
+                "name": "Amazon"
+              }
           }
       }
   </script>
